--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "express-formidable": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.2",
     "morgan": "^1.10.0",
