--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "express": "^5.1.0",
     "express-formidable": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.16.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.10",
