--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "antd": "^5.26.6",
     "axios": "^1.10.0",
+    "braintree-web-drop-in": "^1.45.1",
+    "braintree-web-drop-in-react": "^1.2.1",
+    "i": "^0.3.7",
     "moment": "^2.30.1",
+    "npm": "^11.5.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
